--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <div id="excelData"></div>
 
+    <!-- تضمين مكتبة SheetJS عبر CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.1/xlsx.full.min.js"></script>
     
     <script>
